tests/spec/emit/snapshots/deref_map_index_assignment.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  fn update(m: mut Ref<mut Map<string, int>>, key: string, val: int) {
    m.*[key] = val
  }
---
package main

func update(m *map[string]int, key string, val int) {
	(*m)[key] = val
}
