tests/spec/emit/snapshots/deref_self_in_ref_receiver.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  struct Foo { x: int }
  
  impl Foo {
    fn copy_out(self: Ref<Foo>) -> Foo {
      let copy = self.*
      Foo { x: copy.x }
    }
  }
---
package main

type Foo struct {
	x int
}

func (f *Foo) copyOut() Foo {
	copy_ := *f
	return Foo{x: copy_.x}
}
