tests/spec/emit/snapshots/deref_then_index.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  fn first(items: Ref<Slice<int>>) -> int {
    items.*[0]
  }
---
package main

func first(items *[]int) int {
	return (*items)[0]
}
