tests/spec/emit/snapshots/deref_then_slice.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  fn rest(items: Ref<Slice<int>>) -> Slice<int> {
    items.*[1..]
  }
---
package main

func rest(items *[]int) []int {
	base := *items
	len_1 := len(base)
	return base[1:len_1:len_1]
}
