tests/spec/emit/snapshots/discard_unit_function_call.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  fn do_something() {
    // unit return
  }
  
  fn test() {
    let _ = do_something();
  }
---
package main

func doSomething() {}

func test() {
	doSomething()
}
