tests/spec/emit/snapshots/discarded_tail_call_to_go_builtin_uses_underscore.snap
---
source: tests/spec/emit/functions.rs
description: |
  
  fn test() {
    "test".length()
  }
---
package main

func test() {
	_ = len("test")
}
