tests/spec/emit/snapshots/display_empty_struct_to_string.snap
---
source: tests/spec/emit/types.rs
description: |
  
  #[display]
  struct Blank {}
---
package main

type Blank struct{}

func (b Blank) String() string {
	return "Blank"
}

func (b Blank) toString() string {
	return b.String()
}
