tests/spec/emit/snapshots/display_outer_over_embedded_display_needs_no_shadow.snap
---
source: tests/spec/emit/types.rs
description: |
  
  #[display]
  struct Logger { pub prefix: string }
  
  #[display]
  struct Server {
    embed Logger,
    pub port: int,
  }
---
package main

import "fmt"

type Logger struct {
	Prefix string
}

func (l Logger) String() string {
	return fmt.Sprintf("Logger { prefix: %v }", l.Prefix)
}

func (l Logger) toString() string {
	return l.String()
}

type Server struct {
	Logger
	Port int
}

func (s Server) String() string {
	return fmt.Sprintf("Server { Logger: %v, port: %v }", s.Logger, s.Port)
}

func (s Server) toString() string {
	return s.String()
}
